c/examples/writing-a-c-compiler-tests/tests/chapter_13/valid/floating_expressions/simple.c
/* A simple arithmetic test case */
int main(void) {
    double x = 2.0;
    return (x * 2.0 == 4.0);
}