c/examples/writing-a-c-compiler-tests/tests/chapter_13/invalid_types/extra_credit/compound_bitwise_xor.c
int main(void) {
    // Can't perform compound bitwise operations with doubles
    int i = 0;
    i |= 2.0;
    return (int) i;
}